Comentarios para mantener orden

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="imagenes/6936Logo.ico">
 </head>
 <body>
-        <header> <img src="imagenes/Logo.png" alt="Logo">
+        <header><!--Encabezado-->
+            <img src="imagenes/Logo.png" alt="Logo">
+            <!--Terminar de construir menú horizontal-->
             <ul class="menu horizontal">
                 <li>Informes</li>
                 <li>Registrarse</li>
@@ -33,7 +35,7 @@
                  <h2>Informe</h2>
                  <h3>Aquí podrás obtener informes detallados de tus gastos</h3>
              </section>
-             <footer>
+             <footer><!--Pie de página-->
                  Contacto: 12334567
                  Aplicaciones interactivas
                 </footer>
