--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Control de Gastos</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="imagenes/6936Logo.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/6936Logo.ico">
 </head>
+
 <body>
         <header><!--Encabezado-->
-            <img src="imagenes/Logo.png" alt="Logo">
+            <img src="img/apple-brainstorming-camera-908288.jpg" alt="Fondo">
+            <img src="img/Logo.png" alt="Logo">
+
             <!--Terminar de construir menú horizontal-->
             <ul class="menu horizontal">
                 <li>Informes</li>
